Fix warnings for Java 21
* use Locale.of
* surround Executor with try-with-resources